# pcd_plane_estimator

./: CMakeLists.txt  Dockerfile  README.md  build_cpp.sh  calculate_plane.sh  deps.sh  dockerbuild.sh  pull_docker.sh  run_docker.sh  run_tests.sh  system_entrypoint.sh
data/: learn11_plane.pcd
settings/: .tmux.conf  .vimrc  install_user.sh
src/: pcl_plane_calculation.cpp  pcl_plane_calculation_lib.cc  pcl_visualizer_helper.cc  plane_extractor.cpp  tests.cpp  utils.cc
